added fraud detection

--- a/web-python/templates/index.jinja2
+++ b/web-python/templates/index.jinja2
@@ -55,6 +55,11 @@
                     Google Charts: Area Chart of Sales By Date
                 </a>
             </li>
+            <li>
+                <a href="/gcharts/Table/?url=/api/simplequery&q=select * from fraud_activities limit 100&order_col=credit_card_number">
+                    Google Charts: Fraud Detection
+                </a>
+            </li>
         <li>
             <a href="/gcharts/Table/?url=/api/simplequery&q=select * from receipts_by_credit_card limit 100&order_col=store_id">
                 Google Charts: Table of Receipts Example
