--- a/web-python/templates/index.jinja2
+++ b/web-python/templates/index.jinja2
@@ -13,6 +13,9 @@
                 <a href="/web/search">Solr Search for Products</a>
             </li>
             <li>
+                <a href="/web/searchbyreceipts">Solr Search for Products in Receipts</a>
+            </li>
+            <li>
                 <a href="/web/product">Lookup Product Detail</a>
             </li>
             <li>
